--- a/.github/workflows/check-android-compatibility.yml
+++ b/.github/workflows/check-android-compatibility.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Check Android compatibility
         run: |
           # Run 'test' phase because plugin normally expects to be executed after tests have been compiled
-          # Have to skip 'jpms-test' module because it requires that full Gson JAR has been built
-          mvn --batch-mode --no-transfer-progress test animal-sniffer:check@check-android-compatibility -DskipTests --projects '!jpms-test'
+          # Have to skip 'test-jpms' module because it requires that full Gson JAR has been built
+          mvn --batch-mode --no-transfer-progress test animal-sniffer:check@check-android-compatibility -DskipTests --projects '!test-jpms'
