--- a/test-jpms/pom.xml
+++ b/test-jpms/pom.xml
@@ -21,7 +21,7 @@
     <artifactId>gson-parent</artifactId>
     <version>2.11.1-SNAPSHOT</version>
   </parent>
-  <artifactId>jpms-test</artifactId>
+  <artifactId>test-jpms</artifactId>
   <name>Test: Java Platform Module System (JPMS)</name>
 
   <properties>
