Fix API compatibility workflow failing when building previous version
The workflow is currently failing for the jpms-test module:
> Failed to execute goal org.apache.maven.plugins:maven-compiler-plugin:3.13.0:compile (default-compile) on project jpms-test:
> Fatal error compiling: error: bad value for --module-version option: 'JAPICMP-OLD'

Therefore this commit changes the dummy version number format.

--- a/pom.xml
+++ b/pom.xml
@@ -477,14 +477,12 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>${project.artifactId}</artifactId>
                 <!-- This is set by the GitHub workflow -->
-                <version>JAPICMP-OLD</version>
+                <version>0.0.0-JAPICMP-OLD</version>
               </dependency>
             </oldVersion>
-            <newVersion>
-              <file>
-                <path>${project.build.directory}/${project.build.finalName}.${project.packaging}</path>
-              </file>
-            </newVersion>
+
+            <!-- 'new version' is automatically the version currently being build -->
+
             <parameter>
               <breakBuildOnSourceIncompatibleModifications>true</breakBuildOnSourceIncompatibleModifications>
               <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
