remove the self-Import of gson.annotations
based on #2725 and https://github.com/bndtools/bnd/issues/6220#issuecomment-2312660794
append -noimport:=true to all exports which we do not want to re-import
This avoids issues in OSGi environments where multiple versions of gson are deployed and com.google.gson.annotations causes wiring conflicts between these different versions

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -147,7 +147,7 @@
 
                 -exportcontents:\
                     com.google.gson,\
-                    com.google.gson.annotations,\
+                    com.google.gson.annotations;-noimport:=true,\
                     com.google.gson.reflect,\
                     com.google.gson.stream
               ]]></bnd>
