--- a/pom.xml
+++ b/pom.xml
@@ -339,7 +339,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.0</version>
-          </plugin>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.5.0</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -542,9 +547,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-             <compilerArgs combine.self="override">
-               <compilerArg>-Xlint:all,-options</compilerArg>
-             </compilerArgs>
+              <compilerArgs combine.self="override">
+                <compilerArg>-Xlint:all,-options</compilerArg>
+              </compilerArgs>
             </configuration>
           </plugin>
         </plugins>
