Java 8 follow-up changes (#2747)
* Java 8 follow-up changes

* Fix Error Prone warnings

Note that for the `final` variable warnings, it seems some of those variables
were made `final` intentionally, without the compiler requiring it.
But for consistency I removed the `final` from them as well.

* Disable `UnnecessaryAnonymousClass` Error Prone pattern

Is disabled by default as well.

It seems what this pattern does is suggest to replace anonymous classes
stored in constants with a corresponding method (with the intention that
the developer then uses a method reference to that method). But it even
does this when the anonymous class implements a custom functional type,
and not a generic type such as `Function`.

For example it suggested to replace
```
private static final FieldNamingStrategy CUSTOM_FIELD_NAMING_STRATEGY =
  new FieldNamingStrategy() {
    @Override
    public String translateName(Field f) {
      return "foo";
    }
  };
```

with a method
```
private static String customFieldNamingStrategy(Field f) {
  return "foo";
}
```

Which is probably not that helpful, and might not actually increase
readability.

* Revert some changes for API not available yet in target Android version

--- a/pom.xml
+++ b/pom.xml
@@ -127,9 +127,9 @@
                 <!-- Enforce that correct JDK version is used to avoid cryptic build errors -->
                 <requireJavaVersion>
                   <!-- Other plugins of this build require at least JDK 11 -->
-                  <!-- Fail fast when building with JDK > 17 because it causes build failures,
-                    see https://github.com/google/gson/issues/2501 -->
-                  <version>[11,18)</version>
+                  <!-- Disallow newer JDK versions; they might introduce new lints, drop support for
+                    older compiler Java target versions or cause issues for some Maven plugins -->
+                  <version>[11,22)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
@@ -280,10 +280,9 @@
                 -Xep:UngroupedOverloads:WARN <!-- required by style guide -->
                 -Xep:UnnecessarilyFullyQualified
                 -Xep:UnnecessarilyUsedValue
-                -Xep:UnnecessaryAnonymousClass:OFF <!-- disabled: requires Java 8 -->
                 -Xep:UnnecessaryBoxedVariable:WARN
                 -Xep:UnnecessaryDefaultInEnumSwitch
-                -Xep:UnnecessaryFinal:OFF <!-- disabled: requires Java 8 -->
+                -Xep:UnnecessaryFinal
                 -Xep:UnnecessaryStaticImport:WARN <!-- required by style guide -->
                 -Xep:UnusedException
                 -Xep:UrlInSee
