Improve Maven plugin configuration
- Explicitly specifies `org.apache.maven.plugins` group ID
- Removes redundant `maven-failsafe-plugin` version in `test-shrinker` module
  This is inherited from the parent POM
- Adds required Error Prone compiler arg, see https://github.com/google/error-prone/releases/tag/v2.34.0

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -257,6 +257,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <version>3.3.1</version>
         <executions>
