--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.11.1-SNAPSHOT</version>
+    <version>2.12.0</version>
   </parent>
 
   <artifactId>proto</artifactId>
@@ -29,7 +29,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2024-05-19T18:54:10Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-01-27T22:39:27Z</project.build.outputTimestamp>
 
     <protobufVersion>4.29.2</protobufVersion>
 
