--- a/test-shrinker/pom.xml
+++ b/test-shrinker/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.12.0</version>
+    <version>2.12.1-SNAPSHOT</version>
   </parent>
   <artifactId>test-shrinker</artifactId>
   <name>Test: Code shrinking (ProGuard / R8)</name>
