Make the import of com.google.errorprone optional
Fix https://github.com/google/gson/issues/2794

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -146,8 +146,9 @@
                 Bundle-ContactAddress: ${project.parent.url}
 
                 # Optional dependency for JDK's sun.misc.Unsafe
+                # Optional dependency to google.errorprone
                 # https://bnd.bndtools.org/chapters/920-faq.html#remove-unwanted-imports-
-                Import-Package: sun.misc;resolution:=optional, *
+                Import-Package: sun.misc;resolution:=optional, com.google.errorprone.*;resolution:=optional, *
 
                 -removeheaders: Private-Package
 
