--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.12.1-SNAPSHOT</version>
+    <version>2.12.1</version>
   </parent>
 
   <artifactId>gson-extras</artifactId>
@@ -30,7 +30,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-01-27T22:40:20Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-01-30T22:49:46Z</project.build.outputTimestamp>
 
     <!-- Overwrite property from parent; this module is currently not deployed -->
     <gson.isInternalModule>true</gson.isInternalModule>
