--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.12.1-SNAPSHOT</version>
+    <version>2.12.1</version>
   </parent>
 
   <artifactId>gson</artifactId>
@@ -36,7 +36,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-01-27T22:40:20Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-01-30T22:49:46Z</project.build.outputTimestamp>
 
     <excludeTestCompilation>**/Java17*</excludeTestCompilation>
   </properties>
