--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>com.google.code.gson</groupId>
   <artifactId>gson-parent</artifactId>
-  <version>2.12.1-SNAPSHOT</version>
+  <version>2.12.1</version>
   <packaging>pom</packaging>
 
   <name>Gson Parent</name>
@@ -43,7 +43,7 @@
 
     <!-- Make the build reproducible, see https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
     <!-- Automatically updated by Maven Release Plugin -->
-    <project.build.outputTimestamp>2025-01-27T22:40:20Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-01-30T22:49:46Z</project.build.outputTimestamp>
 
     <!-- These properties are to be overwritten by the Maven modules -->
     <!-- Whether this module is an integration test module -->
@@ -58,7 +58,7 @@
     <url>https://github.com/google/gson/</url>
     <connection>scm:git:https://github.com/google/gson.git</connection>
     <developerConnection>scm:git:git@github.com:google/gson.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>gson-parent-2.12.1</tag>
   </scm>
 
   <developers>
