--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -19,11 +19,11 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.12.1</version>
+    <version>2.12.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-extras</artifactId>
-  <version>2.12.1</version>
+  <version>2.12.2-SNAPSHOT</version>
   <inceptionYear>2008</inceptionYear>
   <name>Gson Extras</name>
   <description>Google Gson grab bag of utilities, type adapters, etc.</description>
@@ -31,7 +31,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-02-05T00:36:21Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-02-05T00:41:06Z</project.build.outputTimestamp>
 
     <!-- Overwrite property from parent; this module is currently not deployed -->
     <gson.isInternalModule>true</gson.isInternalModule>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.12.1</version>
+      <version>2.12.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.annotation</groupId>
