Fix duplicate resource warning for shrinker test
Excluding `module-info.class` should probably not affect shrinker behavior.

--- a/test-shrinker/pom.xml
+++ b/test-shrinker/pom.xml
@@ -104,6 +104,7 @@
             <lib>${java.home}/jmods/java.compiler.jmod</lib>
           </libs>
           <!-- Include dependencies in the final JAR -->
+          <!-- Note: Currently causes warnings due to duplicate resource files, see https://github.com/wvengen/proguard-maven-plugin/issues/388 -->
           <includeDependencyInjar>true</includeDependencyInjar>
           <outjar>proguard-output.jar</outjar>
         </configuration>
@@ -132,6 +133,7 @@
                   <excludes>
                     <!-- Ignore duplicate files in dependencies -->
                     <exclude>META-INF/MANIFEST.MF</exclude>
+                    <exclude>META-INF/versions/9/module-info.class</exclude>
                   </excludes>
                 </filter>
               </filters>
