Run CodeQL for GitHub Actions & improve workflows
The CIFuzz workflow has been adjusted based on
https://github.com/google/oss-fuzz/blob/cafd7a0eb8ecb4e007c56897996a9b65c49c972f/docs/getting-started/continuous_integration.md

--- a/.github/workflows/check-api-compatibility.yml
+++ b/.github/workflows/check-api-compatibility.yml
@@ -3,6 +3,8 @@
 name: Check API compatibility
 
 on: pull_request
+permissions:
+  contents: read #  to fetch code (actions/checkout)
 
 jobs:
   check-api-compatibility:
