--- a/.github/workflows/assignment-ci.yml
+++ b/.github/workflows/assignment-ci.yml
@@ -13,8 +13,14 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: "11"
-          distribution: "temurin"
+          java-version: '11'
+          distribution: 'temurin'
 
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: gson-jar
+          path: gson/target/gson-*.jar
