Another attempt to fix test-graal-native-image.

--- a/test-graal-native-image/pom.xml
+++ b/test-graal-native-image/pom.xml
@@ -118,6 +118,12 @@
         <configuration>
           <skip>true</skip>
         </configuration>
+        <executions>
+          <execution>
+            <id>central-publishing</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
