More guesswork for test-graal-native-image.

--- a/test-graal-native-image/pom.xml
+++ b/test-graal-native-image/pom.xml
@@ -123,6 +123,10 @@
             <id>central-publishing</id>
             <phase>none</phase>
           </execution>
+          <execution>
+            <id>injected-central-publishing</id>
+            <phase>none</phase>
+          </execution>
         </executions>
       </plugin>
     </plugins>
