--- a/pom.xml
+++ b/pom.xml
@@ -382,6 +382,7 @@
           <extensions>true</extensions>
           <configuration>
             <publishingServerId>central</publishingServerId>
+            <autoPublish>true</autoPublish>
             <skipPublishing>${gson.isInternalModule}</skipPublishing>
           </configuration>
         </plugin>
