--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -19,11 +19,11 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-extras</artifactId>
-  <version>2.13.2-rc1</version>
+  <version>2.13.2-SNAPSHOT</version>
   <inceptionYear>2008</inceptionYear>
   <name>Gson Extras</name>
   <description>Google Gson grab bag of utilities, type adapters, etc.</description>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.13.2-rc1</version>
+      <version>2.13.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.annotation</groupId>
@@ -88,6 +88,6 @@
   </developers>
 
   <scm>
-    <tag>gson-parent-2.13.2-rc1</tag>
+    <tag>gson-parent-2.13.2-SNAPSHOT</tag>
   </scm>
 </project>
