Move `central-publish-maven-plugin` to `gson`.
This is the only module that we publish. Apparently this plugin fails if
the last module in the list has `<skipPublishing>false</>`. Thanks to
@Marcono1234 for the tip.

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -334,6 +334,20 @@
           <excludePackageNames>com.google.gson.internal:com.google.gson.internal.bind</excludePackageNames>
         </configuration>
       </plugin>
+
+      <!--
+        Plugins for publishing.
+      -->
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <version>0.8.0</version>
+        <extensions>true</extensions>
+        <configuration>
+          <publishingServerId>central</publishingServerId>
+          <autoPublish>true</autoPublish>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
