Simplify Central deployment & update Release Process guide (#2902)
* Simplify Central deployment & update Release Process guide

* Move central-publishing-maven-plugin outside profiles

Plugin only runs for `deploy` goal anyway so no need to have this in release profile.
Additionally, the other modules (currently only `gson`) declare it as regular plugin, not inside a profile, as well.

--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,6 @@
     <!-- These properties are to be overwritten by the Maven modules -->
     <!-- Whether this module is an integration test module -->
     <gson.isTestModule>false</gson.isTestModule>
-    <!-- Whether this module is internal and currently not deployed -->
-    <gson.isInternalModule>${gson.isTestModule}</gson.isInternalModule>
   </properties>
 
   <!-- These attributes specify that the URLs should be inherited by the modules as is, to avoid constructing
@@ -60,13 +58,6 @@
     <developerConnection>scm:git:git@github.com:google/gson.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
 
   <developers>
     <developer>
@@ -211,6 +202,15 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <!-- Publish gson-parent to Maven Central on `deploy` (common configuration is defined in `pluginManagement`) -->
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <!-- Set `inherited=false` to only apply this execution to gson-parent;
+          if modules should be deployed, it has to be configured explicitly for them -->
+        <inherited>false</inherited>
       </plugin>
     </plugins>
 
@@ -373,6 +373,15 @@
           <version>3.2.8</version>
           <configuration>
             <skip>${gson.isTestModule}</skip>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>3.1.4</version>
+          <configuration>
+            <!-- skip because central-publishing-maven-plugin is used for deployment -->
+            <skip>true</skip>
           </configuration>
         </plugin>
         <plugin>
@@ -600,10 +609,6 @@
                 </goals>
               </execution>
             </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.sonatype.central</groupId>
-            <artifactId>central-publishing-maven-plugin</artifactId>
           </plugin>
         </plugins>
       </build>
